Account controller + associated service methods have been refactored.
