# banking-core/src/main/java/com/alphbank/core/account/rest/AccountController.java
@@ -1,15 +1,22 @@
 package com.alphbank.core.account.rest;
 
 import com.alphbank.commons.impl.JsonLog;
-import com.alphbank.core.account.rest.model.Account;
-import com.alphbank.core.account.rest.model.AccountSearchResponse;
-import com.alphbank.core.account.rest.model.CreateAccountRequest;
 import com.alphbank.core.account.service.AccountService;
-import io.swagger.v3.oas.annotations.tags.Tag;
+import com.alphbank.core.account.service.model.Account;
+import com.alphbank.core.customer.service.model.Customer;
+import com.alphbank.core.rest.model.AccountDTO;
+import com.alphbank.core.rest.model.AccountSearchResponseDTO;
+import com.alphbank.core.rest.model.CreateAccountRequestDTO;
+import com.alphbank.core.rest.model.CustomerDTO;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.openapitools.api.AccountApi;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ServerWebExchange;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.util.UUID;
@@ -18,52 +25,51 @@ import java.util.UUID;
 @CrossOrigin(origins = "*")
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/account")
-@Tag(name = "Account", description = "Description")
-public class AccountController {
+public class AccountController implements AccountApi {
 
     private final AccountService accountService;
     private final JsonLog jsonLog;
 
-    @GetMapping("/search")
-    @ResponseStatus(HttpStatus.OK)
-    public Mono<AccountSearchResponse> searchAccounts(@RequestParam(name = "customer-id") String customerId) {
-        log.info("Search accounts by customerId {}", customerId);
-        return accountService.getAllAccountsByCustomerId(customerId)
-                .collectList()
-                .map(AccountSearchResponse::new)
-                .doOnNext(response -> log.info("Returning accounts {}", jsonLog.format(response)))
-                .doOnError(e -> log.error("Error searching accounts", e));
+    @Override
+    public Mono<ResponseEntity<AccountDTO>> createAccount(Mono<CreateAccountRequestDTO> createAccountRequestDTO, ServerWebExchange exchange) {
+        return createAccountRequestDTO
+                .doOnNext(request -> log.info("Creating account: {}", jsonLog.format(request)))
+                .map(Account::from)
+                .flatMap(accountService::createAccount)
+                .map(Account::toDTO)
+                .doOnNext(response -> log.info("Returning newly created account: {}", jsonLog.format(response)))
+                .doOnError(e -> log.error("Error creating account", e))
+                .map(dto -> ResponseEntity.status(HttpStatus.CREATED).body(dto));
     }
 
-    @PostMapping()
-    @ResponseStatus(HttpStatus.CREATED)
-    public Mono<Account> createAccount(@RequestBody CreateAccountRequest createAccountRequest) {
-        log.info("Creating account {}", jsonLog.format(createAccountRequest));
-        return accountService.createAccount(createAccountRequest)
-                .doOnNext(response -> log.info("Returning newly created account {}", jsonLog.format(response)))
-                .doOnError(e -> log.error("Error creating account", e));
-
-    }
-
-    @DeleteMapping("/{id}")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public Mono<UUID> deleteAccount(@PathVariable("id") UUID accountId) {
-        log.info("Deleting account with accountId {}", accountId);
-        return accountService.deleteAccount(accountId)
-                .doOnSuccess(response -> log.info("Successfully deleted account with id {}", accountId))
-                .doOnError(e -> log.error("Error deleting account with id " + accountId, e))
-                .thenReturn(accountId);
-    }
-
-    @GetMapping("/{id}")
-    @ResponseStatus(HttpStatus.OK)
-    public Mono<Account> getAccount(@PathVariable("id") UUID accountId) {
-        log.info("Getting account with accountId {}", accountId);
+    @Override
+    public Mono<ResponseEntity<AccountDTO>> getAccount(UUID accountId, ServerWebExchange exchange) {
+        log.info("Getting account with id: {}", accountId);
         return accountService
                 .getAccount(accountId)
-                .doOnSuccess(response -> log.info("Returning account {}", jsonLog.format(response)))
-                .doOnError(e -> log.error("Error getting account with id " + accountId, e));
+                .map(Account::toDTO)
+                .doOnNext(response -> log.info("Returning account: {}", jsonLog.format(response)))
+                .doOnError(e -> log.error("Error getting account with id: {}", accountId, e))
+                .map(ResponseEntity::ok);
+    }
+
+    @Override
+    public Mono<ResponseEntity<Void>> deleteAccount(UUID accountId, ServerWebExchange exchange) {
+        log.info("Deleting account with id: {}", accountId);
+        return accountService.deleteAccount(accountId)
+                .doOnSuccess(ignored -> log.info("Successfully deleted account with id: {}", accountId))
+                .doOnError(e -> log.error("Error deleting account with id: {}", accountId, e))
+                .thenReturn(ResponseEntity.noContent().build());
+    }
+
+    @Override
+    public Mono<ResponseEntity<Flux<AccountDTO>>> searchAccounts(String customerId, ServerWebExchange exchange) {
+        log.info("Search accounts by customerId {}", customerId);
+
+        Flux<AccountDTO> customers = accountService.getAllAccountsByCustomerId(customerId)
+                .map(Account::toDTO);
+
+        return Mono.just(ResponseEntity.ok(customers));
     }
 
 }
