# banking-core/src/main/java/com/alphbank/core/account/rest/AccountRestErrorHandler.java
@@ -1,17 +1,21 @@
 package com.alphbank.core.account.rest;
 
+import com.alphbank.commons.impl.AlphExceptionHandler;
 import com.alphbank.core.account.service.error.AccountNotFoundException;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+@Order(Ordered.HIGHEST_PRECEDENCE)
 @RestControllerAdvice
-public class AccountRestErrorHandler {
+public class AccountRestErrorHandler extends AlphExceptionHandler {
 
     @ResponseStatus(HttpStatus.NOT_FOUND)
     @ExceptionHandler(AccountNotFoundException.class)
-    public String handleAccountNotFound(AccountNotFoundException exception){
-        return exception.getMessage();
+    public ErrorResponse handleAccountNotFound(AccountNotFoundException exception) {
+        return createError(HttpStatus.NOT_FOUND, exception.getMessage());
     }
 }
