# banking-core/src/main/java/com/alphbank/core/account/service/repository/model/AccountEntity.java
@@ -1,16 +1,18 @@
 package com.alphbank.core.account.service.repository.model;
 
-import com.alphbank.core.account.rest.model.CreateAccountRequest;
+import com.alphbank.core.account.service.model.Account;
 import lombok.Builder;
 import lombok.Data;
 import org.iban4j.CountryCode;
 import org.iban4j.Iban;
+import org.javamoney.moneta.Money;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.relational.core.mapping.Column;
 import org.springframework.data.relational.core.mapping.Table;
 
 import java.math.BigDecimal;
 import java.util.Currency;
+import java.util.Locale;
 import java.util.Random;
 import java.util.UUID;
 
@@ -23,13 +25,13 @@ public class AccountEntity {
 
     @Column("id")
     @Id
-    private UUID accountId;
-
-    @Column("account_name")
-    private String accountName;
+    private UUID id;
 
     @Column("customer_id")
     private UUID customerId;
+
+    @Column("account_name")
+    private String accountName;
 
     @Column("currency_code")
     private String currencyCode;
@@ -41,19 +43,29 @@ public class AccountEntity {
     @Column("iban")
     private String iban;
 
-    public static AccountEntity from(CreateAccountRequest createAccountRequest) {
+    public static AccountEntity from(Account account, Locale locale) {
         return AccountEntity.builder()
-                .customerId(createAccountRequest.customerId())
-                .accountName(createAccountRequest.accountName())
+                .customerId(account.getCustomerId())
+                .accountName(account.getAccountName())
                 .iban(new Iban.Builder()
-                        .countryCode(CountryCode.getByCode(createAccountRequest.locale().getCountry()))
+                        .countryCode(CountryCode.getByCode(locale.getCountry()))
                         .bankCode(BANK_CODE)
                         .leftPadding(true)
                         .paddingCharacter('0')
                         .accountNumber("" + new Random().nextInt(100_000, 1_000_000))
                         .build()
                         .toString())
-                .currencyCode(Currency.getInstance(createAccountRequest.locale()).getCurrencyCode())
+                .currencyCode(Currency.getInstance(locale).getCurrencyCode())
+                .build();
+    }
+
+    public Account toModel() {
+        return Account.builder()
+                .id(id)
+                .customerId(customerId)
+                .accountName(accountName)
+                .balance(Money.of(balance, currencyCode))
+                .iban(iban)
                 .build();
     }
 }
