# banking-core/src/main/resources/openapi.yaml
@@ -190,20 +190,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Account"
-        "404":
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                type: string
         "409":
           description: Conflict
           content:
             application/json:
               schema:
-                type: string
+                $ref: "#/components/schemas/ErrorResponse"
         "400":
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FieldErrorResponse"
   /account/{account-id}:
     get:
       tags:
@@ -225,20 +223,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Account"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FieldErrorResponse"
         "404":
           description: Not Found
           content:
             application/json:
               schema:
-                type: string
-        "409":
-          description: Conflict
-          content:
-            application/json:
-              schema:
-                type: string
-        "400":
-          description: Bad Request
+                $ref: "#/components/schemas/ErrorResponse"
     delete:
       tags:
         - CoreAccount
@@ -255,25 +251,18 @@ paths:
       responses:
         "204":
           description: No Content
-          content:
-            application/json:
-              schema:
-                type: string
-                format: uuid
         "404":
           description: Not Found
           content:
             application/json:
               schema:
-                type: string
-        "409":
-          description: Conflict
+                $ref: "#/components/schemas/ErrorResponse"
+        "400":
+          description: Bad Request
           content:
             application/json:
               schema:
-                type: string
-        "400":
-          description: Bad Request
+                $ref: "#/components/schemas/FieldErrorResponse"
   /account/search:
     get:
       tags:
@@ -293,21 +282,21 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/AccountSearchResponse"
+                type: array
+                items:
+                  $ref: "#/components/schemas/Account"
         "404":
           description: Not Found
           content:
             application/json:
               schema:
-                type: string
-        "409":
-          description: Conflict
+                $ref: "#/components/schemas/ErrorResponse"
+        "400":
+          description: Bad Request
           content:
             application/json:
               schema:
-                type: string
-        "400":
-          description: Bad Request
+                $ref: "#/components/schemas/FieldErrorResponse"
 
   /payments:
     post:
@@ -759,10 +748,6 @@ components:
           format: uuid
           examples:
             - 3fa85f64-5717-4562-b3fc-2c963f66afa6
-        locale:
-          type: string
-          examples:
-            - sv_SE
         accountName:
           type: string
           examples:
@@ -831,20 +816,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Loan"
-    CustomerSearchResponse:
-      type: object
-      properties:
-        customers:
-          type: array
-          items:
-            $ref: "#/components/schemas/Customer"
-    AccountSearchResponse:
-      type: object
-      properties:
-        accounts:
-          type: array
-          items:
-            $ref: "#/components/schemas/Account"
     ErrorResponse:
       type: object
       properties:
